# gitscan

./: .gitignore  README.md  fetch-repo.sh  fetch-repos.sh  generate-org-summaries.sh  generate-overviews.sh  generate-repo-changelog.sh  generate-repo-changelogs.sh  generate-repo-overview.sh  orgas.txt  summarize-changes.sh
.github/actions/: init.yml
.github/workflows/: changelogs.yaml  ci.yaml  deploy-pages.yaml  scan.yaml
repos/MTES-MCT/: CHANGELOG-generated.md  repos.json  repos.txt
repos/MTES-MCT/dossierfacile-file-analysis/: README.md  github.json  overview.json  pyproject.toml  tree.txt
repos/MTES-MCT/ecobalyse-runner/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/MTES-MCT/trackdechets-data/: CHANGELOG-generated.md  README.md  airflow_requirements.txt  clickhouse_docker-compose.yml  commits.txt  github.json  metabase_docker-compose.yml  overview.json  pyproject.toml  tree.txt
repos/SocialGouv/: CHANGELOG-generated.md  repos.json  repos.txt
repos/SocialGouv/graal/: CHANGELOG-generated.md  CHANGELOG.md  README.md  commits.txt  frontend_package.json  github.json  overview.json  pyproject.toml  tree.txt
repos/SocialGouv/vllm-managed-instance/: README.md  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/: CHANGELOG-generated.md  repos.json  repos.txt
repos/betagouv/aides-agri/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  package.json  pyproject.toml  scripts_pdf-to-structured-data_pyproject.toml  tree.txt
repos/betagouv/aides-calculatrice-back/: CHANGELOG-generated.md  CHANGELOG.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/anssi-recommandations-cyber/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt  ui_package.json
repos/betagouv/anssi-recommandations-cyber-data/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/django-grist-loader/: README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/grist-budget-agriculture/: README.md  commits.txt  github.json  overview.json  package.json  pyproject.toml  tree.txt
repos/betagouv/grist-doc-wk-exporter/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/grist-grav/: README.md  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/infomedicament-html-parser/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/infomedicament_data/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/ragga/: CHANGELOG.md  README.md  github.json  overview.json  pyproject.toml  tree.txt
repos/betagouv/recoco-sync/: README.md  commits.txt  github.json  overview.json  pyproject.toml  requirements.txt  tree.txt
repos/codegouvfr/: CHANGELOG-generated.md  repos.json  repos.txt
repos/etalab/: CHANGELOG-generated.md  repos.json  repos.txt
repos/etalab-ia/: CHANGELOG-generated.md  repos.json  repos.txt
repos/etalab-ia/OpenMockLLM/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/etalab-ia/albert-data-collections/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/etalab-ia/albert-spp/: README.md  commits.txt  compose.yml  github.json  pyproject.toml  tree.txt
repos/etalab-ia/marker-serve/: CHANGELOG-generated.md  README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/etalab-ia/mediatech/: CHANGELOG-generated.md  README.md  commits.txt  docker-compose.yml  github.json  overview.json  pyproject.toml  tree.txt
repos/etalab-ia/rag-facile/: .moon_templates_chainlit-chat_pyproject.toml  .moon_templates_chroma-context_pyproject.toml  .moon_templates_context_pyproject.toml  .moon_templates_ingestion_pyproject.toml  .moon_templates_orchestration_pyproject.toml  .moon_templates_pdf-context_pyproject.toml  .moon_templates_pipelines_pyproject.toml  .moon_templates_rag-core_pyproject.toml  .moon_templates_reflex-chat_pyproject.toml  .moon_templates_reranking_pyproject.toml  .moon_templates_retrieval-albert_pyproject.toml  .moon_templates_retrieval_pyproject.toml  .moon_templates_storage_pyproject.toml  .moon_templates_sys-config_pyproject.toml  CHANGELOG-generated.md  CHANGELOG.md  README.md  apps_admin_pyproject.toml  apps_chainlit-chat_pyproject.toml  apps_cli_pyproject.toml  apps_ingestion_pyproject.toml  apps_reflex-chat_pyproject.toml  commits.txt  github.json  overview.json  packages_albert-client_pyproject.toml  packages_context_pyproject.toml  packages_ingestion_pyproject.toml  packages_pdf-context_pyproject.toml  packages_pipelines_pyproject.toml  packages_rag-config_pyproject.toml  packages_rag-core_pyproject.toml  packages_reranking_pyproject.toml  packages_retrieval-basic_pyproject.toml  packages_retrieval_pyproject.toml  packages_storage_pyproject.toml  pyproject.toml  tools_pyproject.toml  tree.txt
repos/incubateur-ademe/: CHANGELOG-generated.md  repos.json  repos.txt
repos/incubateur-ademe/sites-faciles-saas/: README.md  commits.txt  github.json  overview.json  pyproject.toml  tree.txt
repos/incubateur-territoires/: repos.json  repos.txt
repos/mtes-mct/: repos.json
repos/socialgouv/: repos.json  repos.txt
repos/suitenumerique/: CHANGELOG-generated.md  repos.json  repos.txt
schemas/: repository.schema.json
scripts/: fetch-repo.sh  fetch-repos.sh  generate-changelogs.sh  generate-org-summaries.sh  generate-overviews.sh  generate-repo-changelog.sh  generate-repo-overview.sh  minitree.py  summarize-changes.sh
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/data/: contributions-by-org.json  repos.json
web/scripts/: build-contributions.ts  build-dependencies.ts  build-index.ts
(+5160 files in other folders)
