[project]
name = "ecobalyse-runner"
version = "0.1.0"
description = "Accélerer la mise en place de l'affichage environnemental ; automatisation de la mise à jour des données"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dynaconf>=3.2.12",
    "sniffio>=1.3.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

celery = [
    "redis>=7.1.0",
    "celery>=5.6.0",
]

flower = [
    {include-group = "celery"},
    "flower>=2.0.1",
]

web = [
    {include-group = "celery"},
    "litestar[standard]>=2.18.0",
]
