[project]
name = "trackdechets-elt"
version = "0.1.0"
description = "Data pipelines for Trackdechets project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.88",
    "clickhouse-connect>=0.8.7",
    "clickhouse-sqlalchemy>=0.2.9",
    "dbt-clickhouse==1.9.1",
    "dbt-core>=1.8.9",
    "dbt-osmosis>=1.1.13",
    "dlt[cli,clickhouse]==1.18.2",
    "enlighten>=1.13.0",
    "fastexcel>=0.12.1",
    "pandas>=2.2.3",
    "polars>=1.21.0",
    "psycopg[binary,pool]>=3.2.4",
    "pyproj>=3.7.1",
    "sqlalchemy>=2.0",
    "sqlfluff-templater-dbt>=3.4.0",
    "sqlfluff>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
    "ruff>=0.8.0",
    "pre-commit>=3.0.0",
    "pip-audit>=2.10.0",
]
