[tool.poetry]
name = "graal"
version = "1.0.0"
description = "GRAAL - Système d'analyse et de traitement de documents législatifs"
authors = ["Victor DEGLIAME <victor.degliame@gmail.com>"]
readme = "README.md"
packages = [{include = "graal"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = ">=2.2.2"
openpyxl = ">=3.1.4"
ollama = ">=0.2.1"
rapidfuzz = ">=3.9.4"
numpy = ">=1.26.4"
scikit-learn = ">=1.5.1"
scipy = ">=1.14.0"
python-levenshtein = ">=0.25.1"
pytest = ">=8.2.2"
beautifulsoup4 = ">=4.12.3"
unidecode = ">=1.3.8"
nltk = ">=3.8.1"
pytest-cov = ">=5.0.0"
pytest-xdist = ">=3.6.1"
tabulate = ">=0.9.0"
openai = ">=1.44.1"
pytest-mock = ">=3.14.0"
colorlog = ">=6.8.2"
requests = ">=2.32.3"
xlsxwriter = ">=3.2.0"
pre-commit = ">=4.0.1"
detect-secrets = ">=1.5.0"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
python-multipart = ">=0.0.6"
aiofiles = ">=24.1.0,<25.0.0"
boto3 = ">=1.34.0"
aioboto3 = ">=13.0.0"
pyarrow = ">=12.0.0"
dspy-ai = ">=2.5.0"
sentence-transformers = ">=2.2.0"
# Database dependencies
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
psycopg2-binary = ">=2.9.9"
# OAuth for future ProConnect integration
authlib = ">=1.3.0"
itsdangerous = ">=2.1.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
pytest-asyncio = "^1.3.0"

[tool.poetry.group.dev.dependencies]
virtualenv = "20.35.3"
ipykernel = ">=6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["graal"]
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
include_namespace_packages = true
omit = [
    "graal/api/routes/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["dist", "build", "dev", "typings"]
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-n 4",
    "--cov=graal",
    "--cov-report=lcov:lcov.info",
    "--cov-report=json:coverage.json",
    "--cov-report=",
    "--capture=no",
    "--log-cli-level=INFO",
    "--color=yes",
]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "N", "B", "Q", "S"]
ignore = [
    "D100",  # missing-module-docstring
    "D101",  # missing-class-docstring
    "D103",  # missing-function-docstring
    "E501",  # line-too-long
    "F811",  # redefined-outer-name
    "G001",  # logging-fstring-interpolation
    "N802",  # invalid-name
    "N806",  # non-lowercase-variable-in-function
    "S301",  # pickle is considered harmful
    "S311",  # standard pseudo-random generators are not suitable for security/cryptographic purposes
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B018",  # B018 - Found useless expression - necessary for testing exceptions are raised.
    "D100",  # D100 - Module dostrings not required in test files.
    "D104",  # D104 - Package dostrings not required in test files.
    "S101",  # S101 - Use of assert in tests is fine.
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["call-overload", "import-untyped", "assignment"]
check_untyped_defs = true

[tool.bandit]
tests = ["B201", "B301"]
