[tool.poetry]
name = "ollama-managed-instance"
version = "0.1.0"
description = ""
authors = ["Matéo Mévollon <m.mevollon@proton.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ovh = "^1.2.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
