[project]
requires-python = ">=3.13"
name = "aides-agri"
version = "0.1.0"
dependencies = [
  "django ~=5.2",
  "django-admin-extra-buttons ~=2.1",
  "django-anymail[brevo]~=14.0",
  "django-csp ~=4.0",
  "django-dsfr ~=3.2",
  "django-pgtrigger ~=4.15",
  "django-reversion ~=6.0",
  "django-tasks ~=0.6",
  "django-htmx ~=1.23",
  "django-two-factor-auth[phonenumberslite] ~=1.17",
  "dj-importmap ~=1.0",
  "gunicorn~=24.1",
  "markdown ~=3.8",
  "markdown-grid-tables ~=0.6",
  "mjml-python ~=1.3",
  "psycopg[binary] ~=3.0",
  "qrcode ~=7.4",
  "requests ~=2.32",
  "sentry-sdk[django] ~=2.26",
  "whitenoise ~=6.8",
]

[dependency-groups]
dev = [
  "djade",
  "django-browser-reload",
  "django-debug-toolbar ~=5.2.0,<6",
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-django",
  "pytest-factoryboy",
  "pytest-mock",
  "requests-mock",
]

[tool.coverage.run]
omit = ["**/tests/*"]

[tool.coverage.report]
show_missing = true
