[tool.poetry]
name = "aides-calculatrice-back"
version = "1.0.0"
description = "Le dorsal d'aides-simplifiées"
authors = ["Aides Simplifiées <aides.simplifiees@numerique.gouv.fr>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# emploie temporairement pip < 25 (avec setuptools)
# évite ModuleNotFoundError: No module named 'pkg_resources'
# suite évolution récente de setuptools
pip = "^24.3.1"
setuptools = "^75.7.0"

openfisca-france = "^174.2.8"
openfisca-core = {extras = ["web-api"], version = "^43.4.2"}

[tool.poetry.group.explain]
optional = true

[tool.poetry.group.explain.dependencies]
ipykernel = "^6.29.5"
pandas = "^2.2.3"
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
