[project]
name = "RecommandationsCyberData"
version = "0.1.0"
description = "Une interface permettant d'évaluer le bot de l'ANSSI, basé sur Albert [Albert](https://github.com/betagouv/anssi-recommandations-cyber), et d'y indexer de nouveaux documents RAG."
requires-python = "==3.13.0"
dependencies = [
     "deepeval>=3.8.4",
     "docling",
     "filelock>=3.20.3",
     "httpx",
     "openai",
     "json-repair",
     "pandas==2.3.2",
     "pikepdf",
     "pydantic",
     "pytest",
     "reportlab",
     "requests",
     "respx",
     "types-reportlab",
     "urllib3>=2.5.1",
     "aiohttp>=3.13.3",
     "pyasn1>=0.6.2",
     "wheel>=0.46.2",
     "protobuf>=5.29.6",
]

[dependency-groups]
dev = [
    "mypy",
    "pandas-stubs>=2.3.0,<2.3.3",
    "psycopg2-binary",
    "pytest-asyncio",
    "ruff",
    "types-psycopg2",
    "types-regex>=2025.11.3.20251106",
    "types-requests",
    "pipdeptree",
]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.ruff]
target-version = "py313"
