[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grist-budget-agriculture"
version = "0.0.1"
dependencies = [
  "click",
  "Flask",
  "flask-cors",
  "grist_api",
  "gunicorn",
  "imaplib2",
  "openpyxl",
  "pandas",
  "pre-commit",
  "pyjwt",
  "pypdf",
  "python-dotenv",
  "requests",
  "ruff",
  "xlsxwriter",
]
requires-python = "==3.11.14"
authors = [
  {name = "Thomas Guillet", email = "thomas@codeursenliberte.fr"},
]
description = "Module companion de l'application de budget de la Ruche Numérique sur Grist"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
