[project]
name = "grist-doc-wk-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prometheus-client>=0.21.1",
    "psutil>=7.0.0",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]

[tool.isort]
multi_line_output=3
include_trailing_comma=true
