[project]
name = "grav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.2.0",
    "httpx>=0.28.1",
    "python-json-logger>=3.3.0",
    "python-multipart>=0.0.20",
    "starlette>=0.46.2",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
