[tool.poetry]
name = "index1"
version = "0.1.0"
description = ""
authors = ["Julien Bouquillon <julien.bouquillon@beta.gouv.fr>"]

[tool.poetry.dependencies]
python =  ">=3.11,<3.12"
llama-index = "^0.10.12"
python-frontmatter = "^1.0.0"
chromadb = "^0.4.22"
mypy = "^1.5.1"
streamlit = "^1.31.1"
openai = "^1.12.0"
llama-index-readers-file = "^0.1.5"
streamlit-feedback = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
