[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["data*", "logs*", "__pycache__*"]

[project]
name = "albert-data-collections"
version = "0.1.0"
description = "Useful functionalities and pipelines related to ALBERT's data collections."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"}
]

dependencies = [
    "requests==2.32.4",
    "docopt==0.6.2",
    "dotenv==0.9.9",
]

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.urls]
Homepage = "https://github.com/etalab/albert-data-collections"
Repository = "https://github.com/etalab/albert-data-collections"