[project]
name = "albert-spp"
version = "1.0.3"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.111.1",
    "pydantic==2.8.2",
    "uvicorn==0.30.1",
    "redis==5.0.2",
    "requests==2.32.3",
]

[project.optional-dependencies]
test = ["pytest==8.2.2", "fakeredis==2.23.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["F403", "F841"] # import * and never used variables

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["config", "utils", "app"]
forced-separate = ["tests"]

[tool.ruff.lint.isort.sections]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
