[project]
name = "mediatech"
description = "MEDIATECH: Processing of data made publicly available by French government agencies, to facilitate access to vectorized and ready for AI projects public data within the french administrations."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["IA", "LLM", "ALBERT","DATA", "BIBLIOTHEQUE","MEDIATECH"]
authors = [
    {name = "Etalab", email = "etalab@modernisation.gouv.fr"}
]
version = "0.1.0"
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "psycopg2-binary==2.9.10",
    "dotenv==0.9.9",
    "openai==1.75.0",
    "langchain-text-splitters==0.3.8",
    "wget==3.2",
    "polars==1.29.0",
    "fastembed==0.6.1",
    "qdrant-client==1.14.2",
    "langchain==0.3.25",
    "lxml==5.4.0",
    "huggingface-hub==0.34.4",
    "docopt==0.6.2",
    "unidecode==1.4.0",
    "pandas==2.2.3",
    "duckdb==1.3.2",
    "apache-airflow==3.0.6",
    "apache-airflow-providers-apprise==2.1.2",
    "xxhash==3.5.0",
    "transformers==4.57.3"
]

[project.urls]
Source = "https://github.com/etalab-ia/mediatech"
Documentation = "https://github.com/etalab-ia/mediatech"

[project.optional-dependencies]
dev = [
    "ruff"
]

[project.scripts]
mediatech = "main:main"

[tool.setuptools.packages.find]
include = ["config*", "database*", "download_and_processing*", "utils*"]

[tool.setuptools]
py-modules = ["main"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"